# herepath

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/herepath/: __init__.py  __main__.py  _core.py
src/py_here/: __init__.py  __main__.py  _core.py
src/pyhere/: __init__.py  __main__.py  _core.py
tests/: test_cli.py  test_herepath.py  test_pyhere.py
